crates/moire-source-context/src/snapshots/moire_source_context__tests__enclosing_fn_three_params.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn process(a: u32, b: u32, c: u32)
# scope 2..2

   2 |     spawn(async move { a });
