crates/moire-source-context/src/snapshots/moire_source_context__tests__extract_match_expression.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# fn process()
# scope 3..10

   3 |     match self.rx.recv().await {
     | ...
  10 |     }
