crates/moire-source-context/src/snapshots/moire_source_context__tests__extract_multi_line_await.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# async do_work()
# scope 2..4

   2  |     let handle = session
   3 >|         .establish_as_acceptor(self.root_settings, self.metadata)
   4  |         .await?;
