crates/moire-source-context/src/snapshots/moire_source_context__tests__extract_simple_statement.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# fn foo()
# scope 2..2

   2 >|     let x = 42;
