crates/moire-source-context/src/snapshots/moire_source_context__tests__few_statements_no_cuts.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# fn small()
# scope 2..2

   2 |     let a = 1;
