crates/moire-source-context/src/snapshots/moire_source_context__tests__few_statements_no_cuts.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# small()
# scope 2..3

   2 >|     let a = 1;
   3  |     let b = 2;
